Rearranged source.  Added lint.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,16 @@
 ## Automake template for ifm.
 
+AUTOMAKE_OPTIONS = foreign
+
 bin_PROGRAMS = ifm 
 
-ifm_SOURCES = ifm-build.c ifm-build.h ifm-driver.h ifm-groff.c ifm-groff.h  \
-	      ifm-item.c ifm-item.h ifm-join.c ifm-join.h ifm-link.c	    \
-	      ifm-link.h ifm-main.c ifm-main.h ifm-parse.y ifm-parse.h	    \
-	      ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c ifm-raw.h   \
-	      ifm-room.c ifm-room.h ifm-scan.l ifm-task.c ifm-task.h	    \
-	      ifm-text.c ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h \
-	      ifm.h
+ifm_SOURCES = ifm-driver.h ifm-groff.c ifm-groff.h ifm-main.c ifm-main.h    \
+	      ifm-map.c ifm-map.h ifm-parse.y ifm-parse.h ifm-path.c	    \
+	      ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c ifm-raw.h ifm-scan.l   \
+	      ifm-task.c ifm-task.h ifm-text.c ifm-text.h ifm-tk.c ifm-tk.h \
+	      ifm-util.c ifm-util.h ifm.h
+
+ifm_LDADD	= -lvars
 
 SYS_INIT	= ifm-init.ifm
 
@@ -20,7 +22,10 @@ pkgdata_DATA	= $(LIBFILES)
 
 EXTRA_DIST 	= $(LIBFILES)
 
-INCLUDES	= -DVERSION=\"$(VERSION)\" \
+IFMLIB		= ../lib
+
+INCLUDES	= -I$(IFMLIB) \
+		  -DVERSION=\"$(VERSION)\" \
 		  -DIFMPATH=\".:$(pkgdatadir)\" \
 		  -DPS_PROLOG=\"$(PS_PROLOG)\" \
 		  -DSYSINIT=\"$(pkgdatadir)/$(SYS_INIT)\" \
@@ -28,6 +33,8 @@ INCLUDES	= -DVERSION=\"$(VERSION)\" \
 
 YFLAGS		= -d
 
-LDFLAGS		= -Wl,-rpath -Wl,$(libdir)
+LDFLAGS		= -L$(IFMLIB)
 
 ifm-parse.h:	ifm-parse.c
+
+lint:;		lint -habx $(INCLUDES) *.c
