--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,8 +3,9 @@
 infodir		= $(prefix)/info
 info_DATA	= ifm.info
 
-EXTRA_DIST	= ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.ps
+EXTRA_DIST	= ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.ps ifm.html
 
+TROFF		= groff -man
 NROFF		= groff -Tascii -man.nopage
 
 all:		Makefile
@@ -21,10 +22,13 @@ ifm.txt:	ifm.1
 		$(NROFF) -P-fbuo $< > $@
 
 ifm.info:	ifm.pod
-		pod2inf -w $< | infoize -d25 -v -i ifm -o $@
+		pod2inf $< | infoize -d30 -v -i ifm -o $@
 
 ifm.ps:		ifm.1
-		groff -man $< > $@
+		$(TROFF) $< > $@
+
+ifm.html:	ifm.pod
+		pod2html $< > $@
 
 install-man:	ifm.1
 		cp $< $(mandir)/man1
@@ -33,3 +37,5 @@ install-cat:	ifm.doc
 		rm -f $(mandir)/cat1/ifm.z
 		cp $< $(mandir)/cat1/ifm
 		pack -f $(mandir)/cat1/ifm
+
+clean:;		rm -f *cache
