--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,12 +3,12 @@
 infodir		= $(prefix)/info
 info_DATA	= ifm.info
 
-EXTRA_DIST	= ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.ps ifm.html
+EXTRA_DIST	= ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.html
 
 all:		ifm.info
 
 @common_rules@
 
-ifm.info:	ifm.idx
+ifm.info:	ifm.key
 
 clean:;		rm -f *cache
