Fixed portability glitch with libdir.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,37 +1,34 @@
 ## Automake template for ifm.
 
-bin_PROGRAMS	= ifm
+bin_PROGRAMS = ifm
 
-IFMLIBDIR	= ../lib
+ifm_SOURCES = ifm-driver.h ifm-main.c ifm-main.h ifm-map.c ifm-map.h	  \
+ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c \
+ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l ifm-task.c ifm-task.h ifm-text.c \
+ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h
 
-ifm_SOURCES	= ifm-driver.h ifm-main.c ifm-main.h ifm-map.c ifm-map.h      \
-		  ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c      \
-		  ifm-ps.h ifm-raw.c ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l \
-		  ifm-task.c ifm-task.h ifm-text.c ifm-text.h ifm-tk.c	      \
-		  ifm-tk.h ifm-util.c ifm-util.h
+IFMLIBDIR = $(top_srcdir)/lib
 
-ifm_LDADD	= -lvars
+ifm_LDADD = -lvars
 
-ifm_LDFLAGS	= -L$(IFMLIBDIR)
+ifm_LDFLAGS = -L$(IFMLIBDIR)
 
-PS_PROLOG	= ifm-pro.ps
+PS_PROLOG = ifm-pro.ps
 
-LIBFILES	= $(PS_PROLOG)
+LIBFILES = $(PS_PROLOG)
 
-pkgdata_DATA	= $(LIBFILES)
+pkgdata_DATA = $(LIBFILES)
 
-EXTRA_DIST 	= $(LIBFILES)
+EXTRA_DIST = $(LIBFILES)
 
-YFLAGS		= -d -v
+YFLAGS = -d -v
 
-INCLUDES	= -I$(IFMLIBDIR) \
-		  -DIFMPATH=\".:$(pkgdatadir)\" \
-		  -DPS_PROLOG=\"$(PS_PROLOG)\" \
-		  -DSYSINIT=\"$(pkgdatadir)/ifm-init.ifm\" \
-		  -DPS -DTEXT -DTK -DRAW -DREC
+INCLUDES = -DPS -DTEXT -DTK -DRAW -DREC -DPS_PROLOG=\"$(PS_PROLOG)\"	\
+-DSYSINIT=\"$(pkgdatadir)/ifm-init.ifm\" -DIFMPATH=\".:$(pkgdatadir)\"	\
+-I$(IFMLIBDIR)
 
 $(bin_PROGRAMS): $(IFMLIBDIR)/libvars.a
 
-ifm-parse.h:	ifm-parse.c
+ifm-parse.h: ifm-parse.c
 
-lint:;		lint -habx $(DEFS) $(INCLUDES) *.c
+lint:; lint -habx $(DEFS) $(INCLUDES) *.c
