--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,14 +1,15 @@
 ## Automake template for ifm documentation.
 
-infodir		= $(prefix)/info
-info_DATA	= ifm.info
+infodir = $(prefix)/info
 
-EXTRA_DIST	= ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.html ifm.key
+info_DATA = ifm.info
 
-all:		ifm.info
+EXTRA_DIST = ifm.pod ifm.info ifm.txt ifm.doc ifm.1 ifm.html ifm.key
+
+all: ifm.info
 
 @common_rules@
 
-ifm.info:	ifm.key
+ifm.info: ifm.key
 
-clean:;		rm -f *cache
+CLEANFILES = *cache
