--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,11 +7,9 @@ ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c \
 ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l ifm-task.c ifm-task.h ifm-text.c \
 ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h
 
-IFMLIBDIR = $(top_srcdir)/lib
-
 ifm_LDADD = -lvars
 
-ifm_LDFLAGS = -L$(IFMLIBDIR)
+ifm_LDFLAGS = -L../lib
 
 PS_PROLOG = ifm-pro.ps
 
@@ -23,10 +21,10 @@ EXTRA_DIST = $(LIBFILES)
 
 YFLAGS = -d -v
 
-INCLUDES = -I$(IFMLIBDIR) -DSYSINIT=\"$(pkgdatadir)/ifm-init.ifm\"	\
--DIFMPATH=\".:$(pkgdatadir)\" -DPS_PROLOG=\"$(PS_PROLOG)\"
+INCLUDES = -I../lib -DSYSINIT=\"$(pkgdatadir)/ifm-init.ifm\"		\
+           -DIFMPATH=\".:$(pkgdatadir)\" -DPS_PROLOG=\"$(PS_PROLOG)\"
 
-$(bin_PROGRAMS): $(IFMLIBDIR)/libvars.a
+$(bin_PROGRAMS): ../lib/libvars.a
 
 ifm-parse.h: ifm-parse.c
 
