--- a/configure.in
+++ b/configure.in
@@ -2,8 +2,9 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/ifm-main.c)
 AC_CONFIG_AUX_DIR(config)
 
-AM_INIT_AUTOMAKE(ifm, 3.0)
+AM_INIT_AUTOMAKE(ifm, 3.1)
 AM_CONFIG_HEADER(config.h)
+AM_WITH_DMALLOC
 
 dnl Checks for programs.
 AC_PROG_CC
