Added subdirs to zip file, since winzip can cope with them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS	= foreign
 SUBDIRS			= @BUILD@
-DIST_SUBDIRS		= lib src doc tests scr2ifm tkifm
+DIST_SUBDIRS		= vars src lib doc tests scr2ifm tkifm
 EXTRA_DIST		= README.src README.win32 README.maps
 
 dist-hook:;		cp -rp $(srcdir)/config $(srcdir)/contrib $(distdir)
@@ -10,27 +10,42 @@ dist-hook:;		cp -rp $(srcdir)/config $(srcdir)/contrib $(distdir)
 ## Stuff for Win32 distribution.
 
 ZIPDIR			= ../ifm
-CYGDLL			= /bin/cygwin.dll
 
-IFM			= src/ifm.exe src/ifm-pro.ps doc/ifm.txt doc/ifm.html
+EXE			= src/ifm.exe
 
-SCR2IFM			= scr2ifm/scr2ifm.pl scr2ifm/scr2ifm.txt \
-			  scr2ifm/scr2ifm.html
+FILES			= README README.win32 README.maps NEWS COPYING
 
-TKIFM			= tkifm/tkifm.tcl tkifm/tkifm.txt tkifm/tkifm.html
+PROGS			= $(EXE) tkifm/tkifm.tcl scr2ifm/scr2ifm.pl
 
-DOCS			= README README.win32 README.maps NEWS COPYING
+DLLS			= /bin/cygwin.dll
 
-ZIPFILES		= $(IFM) $(SCR2IFM) $(TKIFM) $(DOCS) $(CYGDLL)
+DOCS			= doc/ifm.txt doc/ifm.html tkifm/tkifm.txt \
+			  tkifm/tkifm.html scr2ifm/scr2ifm.txt \
+			  scr2ifm/scr2ifm.html 
 
-zip:;			$(MAKE) all
-			rm -rf $(ZIPDIR)
+LIBS			= lib/ifm-pro.ps lib/ifm-rgb.txt
+
+ZIPFILES		= $(IFM) $(LIB) $(SCR2IFM) $(TKIFM) $(DOCS) $(CYGDLL)
+
+zip:;			$(MAKE) all zipdir
+
+ziptest:;		$(MAKE) ZIPDIR=zip EXE="" DLLS="" zipdir
+
+zipdir:;		rm -rf $(ZIPDIR)
 			mkdir $(ZIPDIR)
-			cp $(ZIPFILES) $(ZIPDIR)
+			cp $(FILES) $(ZIPDIR)
 			for i in README NEWS COPYING; do \
 				mv $(ZIPDIR)/$$i $(ZIPDIR)/$$i.txt; \
 			done
 			mv $(ZIPDIR)/README.win32 $(ZIPDIR)/WIN32.txt
 			mv $(ZIPDIR)/README.maps $(ZIPDIR)/MAPS.txt
-			strip $(ZIPDIR)/ifm.exe
-			chmod +w $(ZIPDIR)/*
+			mkdir $(ZIPDIR)/progs
+			cp $(PROGS) $(DLLS) $(ZIPDIR)/progs
+			if test "$(EXE)" != ""; then \
+				strip $(ZIPDIR)/progs/$(EXE); \
+			fi
+			mkdir $(ZIPDIR)/docs
+			cp $(DOCS) $(ZIPDIR)/docs
+			mkdir $(ZIPDIR)/lib
+			cp $(LIBS) $(ZIPDIR)/lib
+			chmod -R +w $(ZIPDIR)
