Added ifm-vars.[ch].  Made colour file a variable.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,21 +5,15 @@ bin_PROGRAMS = ifm
 ifm_SOURCES = ifm-driver.h ifm-main.c ifm-main.h ifm-map.c ifm-map.h	  \
 ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c \
 ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l ifm-task.c ifm-task.h ifm-text.c \
-ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h
+ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h ifm-vars.c ifm-vars.h
 
 ifm_LDADD = -lvars
 
 ifm_LDFLAGS = -L../vars
 
-PS_PROLOG = ifm-pro.ps
-
-COLOUR_DEFS = ifm-rgb.txt
-
 YFLAGS = -d -v
 
-INCLUDES = -I../lib -DSYSINIT=\"$(pkgdatadir)/ifm-init.ifm\"		\
-           -DIFMPATH=\"$(pkgdatadir):.\" -DPS_PROLOG=\"$(PS_PROLOG)\"   \
-	   -DCOLOUR_DEFS=\"$(COLOUR_DEFS)\"
+INCLUDES = -I../lib -DSYSINIT=\"ifm-init.ifm\" -DIFMPATH=\"$(pkgdatadir):.\"
 
 $(bin_PROGRAMS): ../vars/libvars.a
 
