Fixed problem with blank lines.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,7 +1,7 @@
 ## Automake template for IFM documentation.
 
 SRCS = ifm-top.pod ifm-desc.pod ifm-oper.pod ifm-map.pod ifm-task.pod	\
-ifm-out.pod ifm-init.pod ifm-lang.pod ifm-diag.pod ifm-bot.pod
+ifm-out.pod ifm-lang.pod ifm-diag.pod ifm-bot.pod
 
 infodir = $(prefix)/info
 
@@ -14,10 +14,13 @@ all: ifm.info
 @common_rules@
 
 doc: $(SRCS)
-	cat $(SRCS) > ifm.pod; $(MAKE) all
-
-ifm-init.pod: $(srcdir)/../lib/ifm-init.ifm
-	$(PODIFY) $< > $@
+	@ rm -f ifm.pod
+	@ for i in $(SRCS); do \
+		echo Adding $$i; \
+		echo >> ifm.pod; \
+		$(CONFIG) $$i | podpp >> ifm.pod; \
+	done
+	@ $(MAKE) all
 
 ETAGS_ARGS = -l none -r '/^=head.[ \t]+\(.+\)/\1/' $(SRCS)
 
