--- a/configure.in
+++ b/configure.in
@@ -14,7 +14,7 @@ AM_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PROG_MAKE_SET
 AC_PATH_PROG(PERL, perl)
-AC_PATH_PROGS(WISH, wish wish8.0, no)
+AC_PATH_PROGS(WISH, wish wish8.0 wish80, no)
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
