Fixed installation again.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,7 @@ ifm-parse.y ifm-parse.h ifm-path.c ifm-path.h ifm-ps.c ifm-ps.h ifm-raw.c \
 ifm-raw.h ifm-rec.c ifm-rec.h ifm-scan.l ifm-task.c ifm-task.h ifm-text.c \
 ifm-text.h ifm-tk.c ifm-tk.h ifm-util.c ifm-util.h ifm-vars.c ifm-vars.h
 
-VARS = $(top_srcdir)/vars
+VARS = ../vars
 
 ifm_LDADD = -lvars
 
