--- a/configure.in
+++ b/configure.in
@@ -3,14 +3,14 @@ AC_INIT(src/ifm-main.c)
 AC_CONFIG_AUX_DIR(config)
 
 AM_INIT_AUTOMAKE(ifm, 3.1)
-AM_CONFIG_HEADER(config/config.h)
+AM_CONFIG_HEADER(config.h)
 AM_WITH_DMALLOC
 
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_YACC
 AM_PROG_LEX
-AM_PROG_INSTALL
+AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PROG_MAKE_SET
 AC_PATH_PROG(PERL, perl)
@@ -51,7 +51,7 @@ if test $WISH != no; then
 fi
 
 dnl Check for executable suffix.
-AM_EXEEXT
+AC_CYGWIN
 
 dnl Add common Makefile rules.
 common_rules=$srcdir/config/Makefile.add
