--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/ifm-main.c)
 AC_CONFIG_AUX_DIR(config)
 
-AM_INIT_AUTOMAKE(ifm, 3.1)
+AM_INIT_AUTOMAKE(ifm, 4.0)
 AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SUBDIRS(vars)
 
@@ -21,7 +21,7 @@ dnl Checks for libraries.
 AC_CHECK_LIB(m, sin)
 
 dnl Check for wish.
-AC_PATH_PROGS(WISH, wish wish8.0 wish80, no)
+AC_PATH_PROGS(WISH, wish8.0 wish80 wish, no)
 
 tkifm=tkifm
 AC_SUBST(tkifm)
@@ -31,7 +31,7 @@ if test $WISH = no; then
 fi
 
 dnl Check for perl.
-AC_PATH_PROG(PERL, perl, no)
+AC_PATH_PROGS(PERL, perl5.002 perl5 perl, no)
 
 scr2ifm=scr2ifm
 AC_SUBST(scr2ifm)
