--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/ifm-main.c)
-AC_CONFIG_AUX_DIR(config)
+AC_CONFIG_AUX_DIR(etc)
 
 AM_INIT_AUTOMAKE(ifm, 4.1)
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER(etc/config.h)
 AC_CONFIG_SUBDIRS(vars)
 
 dnl Checks for programs.
